# freqtrade

./: .gitignore  CONFIG_GUIDE.md  KNOWLEDGE_NOTES.md  QUICKSTART.md  README.md  docker-compose.yml  feather_analyzer.ipynb  feather_data_analyzer.ipynb  freqtrade_完整笔记.md  mkdocs.yml  preview_feather.py  pyproject.toml  strategy_tester.ipynb
.github/workflows/: deploy.yml
docs/: 01-配置文件详解.md  02-回测结果解读指南.md  03-金融交易术语详解.md  04-Freqtrade命令手册.md  05-Hyperopt结果解读指南.md  06-策略编写指南.md  DoubleMAStrategy_README.md  KNOWLEDGE_NOTES.md  LEARNING_PATH.md  QUICKSTART.md  index.md  show-trades.sh
scripts/: feather_analyzer.ipynb  set-secrets.sh  strategy_tester.ipynb
tests/: test_double_ma_strategy.py
user_data/: config.example.json  config.json  config_backtest.example.json  config_backtest.json  config_double_ma.json  config_ichiV1.json  tradesv3.dryrun.sqlite  tradesv3.sqlite  tradesv3.sqlite-shm  tradesv3.sqlite-wal
user_data/backtest_results/: .last_result.json  backtest-result-2025-09-17_06-18-51.meta.json
user_data/data/binance/futures/: BTC_USDT_USDT-5m-futures.feather  BTC_USDT_USDT-8h-funding_rate.feather  BTC_USDT_USDT-8h-mark.feather  ETH_USDT_USDT-5m-futures.feather  ETH_USDT_USDT-8h-funding_rate.feather  ETH_USDT_USDT-8h-mark.feather
user_data/hyperopt_results/: .last_result.json
user_data/hyperopts/: DoubleMAHyperOptLoss.py
user_data/strategies/: DoubleMAStrategy.json  DoubleMAStrategy.py  ichiV1--.json  sample_strategy.json  sample_strategy.py
