[project]
name = "freqtrade-docs"
version = "0.1.0"
description = "Freqtrade documentation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
dev = []
